crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_bf_group_editor.snap
---
source: crates/app/src/tui/mod.rs
expression: screen
---
  1:Atlas A   2:Atlas B   3:Atlas C   4:Atlas D   5:Atlas E
▸ Lance 2   MV 3  SZ 4  PV 52  Normal
╔ Atlas AS7-D ═══════════════════════════════════╗
║BM   SZ 4   MV 3   TMM 1                        ║
║Skill 4+   PV 52                                ║
║Armor     ██████████  10/10                     ║
║Structure ████████  8/8                         ║
║Heat      [0] 1  2  3  S                        ║
║Damage    S 5   M 5   L 2   E 1                 ║
║To-Hit    S 4+  M 6+  L 8+  E 10+               ║
║Crits     E╔ Group force ═════════════════════════════════════════════════════════════╗
║Specials  A║   1 Atlas AS7-D                    SK4  Lance 1                          ║
║Rng S 0-1  ║   2 Atlas AS7-D                    SK4  Lance 1                          ║
╚═══════════║   3 Atlas AS7-D                    SK4  Lance 1                          ║
            ║   4 Atlas AS7-D                    SK4  Lance 1                          ║
            ║▶  5 Atlas AS7-D                    SK4  Lance 2                          ║
            ║                                                                          ║
            ║[↑↓] element   [←→] move between units   [n] split to new unit            ║
            ║[u] unassign   [s/S] skill ±   [x] remove   [a] auto-group…   [Esc] done  ║
            ╚══════════════════════════════════════════════════════════════════════════╝









 page 2/2 · Spc:dmg  u:rep  o/i:heat  c:crit  t:to-hit  g:group  m:morale  n:round  r:rename  ,/.:un
