crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_bf_help_modal.snap
---
source: crates/app/src/tui/mod.rs
expression: screen
---
  1:Atlas A   2:Atlas B   3:Atlas C   4:Atlas D
▸ Lance 1   MV 3  SZ 4  PV 208  Normal
┌ Atlas AS7-D ──────╔ Keys ════════════════════════════════════════════════════╗───────────────────┐
│BM   SZ 4   MV 3   ║Standard BattleForce                                      ║                   │
│Skill 4+   PV 52   ║  Space    1 damage (armor then structure)                ║                   │
│Armor     █████████║  u        repair 1                                       ║                   │
│Structure ████████ ║  o / i    heat up / down (manual cooldown, p.49)         ║                   │
│Heat      [0] 1  2 ║  c        criticals (p.42 column; a = ARM spent)         ║                   │
│Damage    S 5   M 5║  t        to-hit shot (p.39 table + damage preview)      ║ 1                 │
│To-Hit    S 4+  M 6║  g        grouping editor (a = doctrine auto-group)      ║ 10+               │
│Crits     Eng0  FC0║  m        cycle Unit morale rung (manual)                ║n0                 │
│Specials  AC2/2/-  ║  n        new round (clears crew-stunned)                ║1/1                │
│Rng S 0-1  M 2-4  L║  r        rename unit                                    ║10*                │
└───────────────────║  s        edit element Skill  (g is grouping here)       ║───────────────────┘
┌ Atlas AS7-D ──────║  L        log snapshot (game log)                        ║═══════════════════╗
│BM   SZ 4   MV 3   ║Selection                                                 ║                   ║
│Skill 4+   PV 52   ║  , / .    previous / next element  ([ / ] also)          ║                   ║
│Armor     █████████║  < / >    jump 4 elements (one card row)                 ║                   ║
│Structure ████████ ║General                                                   ║                   ║
│Heat      [0] 1  2 ║  b        set force point limit (PV)                     ║                   ║
│Damage    S 5   M 5║  z        undo                                           ║ 1                 ║
│To-Hit    S 4+  M 6║  a / D    add / delete element                           ║ 10+               ║
│Crits     Eng0  FC0║  S        sessions browser                               ║n0                 ║
│Specials  AC2/2/-  ║  ^t       display picker (theme + layout)                ║1/1                ║
│Rng S 0-1  M 2-4  L║  q        quit                                           ║10*                ║
└───────────────────║  press any key to close                                  ║═══════════════════╝
                    ╚══════════════════════════════════════════════════════════╝


 Spc:dmg  u:rep  o/i:heat  c:crit  t:to-hit  g:group  m:morale  n:round  r:rename  ,/.:unit  ?:help
