crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_bf_initial.snap
---
source: crates/app/src/tui/mod.rs
expression: screen
---
  1:Atlas A   2:Atlas B   3:Atlas C   4:Atlas D
▸ Lance 1   MV 3  SZ 4  PV 208  Normal
┌ Atlas AS7-D ───────────────────────────────────┐┌ Atlas AS7-D ───────────────────────────────────┐
│BM   SZ 4   MV 3   TMM 1                        ││BM   SZ 4   MV 3   TMM 1                        │
│Skill 4+   PV 52                                ││Skill 4+   PV 52                                │
│Armor     ██████████  10/10                     ││Armor     ██████████  10/10                     │
│Structure ████████  8/8                         ││Structure ████████  8/8                         │
│Heat      [0] 1  2  3  S                        ││Heat      [0] 1  2  3  S                        │
│Damage    S 5   M 5   L 2   E 1                 ││Damage    S 5   M 5   L 2   E 1                 │
│To-Hit    S 4+  M 6+  L 8+  E 10+               ││To-Hit    S 4+  M 6+  L 8+  E 10+               │
│Crits     Eng0  FC0  MP−0  Wpn0                 ││Crits     Eng0  FC0  MP−0  Wpn0                 │
│Specials  AC2/2/-  IF1  LRM1/1/1                ││Specials  AC2/2/-  IF1  LRM1/1/1                │
│Rng S 0-1  M 2-4  L 5-8  E 9-10*                ││Rng S 0-1  M 2-4  L 5-8  E 9-10*                │
└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘
┌ Atlas AS7-D ───────────────────────────────────┐╔ Atlas AS7-D ═══════════════════════════════════╗
│BM   SZ 4   MV 3   TMM 1                        │║BM   SZ 4   MV 3   TMM 1                        ║
│Skill 4+   PV 52                                │║Skill 4+   PV 52                                ║
│Armor     ██████████  10/10                     │║Armor     ██████████  10/10                     ║
│Structure ████████  8/8                         │║Structure ████████  8/8                         ║
│Heat      [0] 1  2  3  S                        │║Heat      [0] 1  2  3  S                        ║
│Damage    S 5   M 5   L 2   E 1                 │║Damage    S 5   M 5   L 2   E 1                 ║
│To-Hit    S 4+  M 6+  L 8+  E 10+               │║To-Hit    S 4+  M 6+  L 8+  E 10+               ║
│Crits     Eng0  FC0  MP−0  Wpn0                 │║Crits     Eng0  FC0  MP−0  Wpn0                 ║
│Specials  AC2/2/-  IF1  LRM1/1/1                │║Specials  AC2/2/-  IF1  LRM1/1/1                ║
│Rng S 0-1  M 2-4  L 5-8  E 9-10*                │║Rng S 0-1  M 2-4  L 5-8  E 9-10*                ║
└────────────────────────────────────────────────┘╚════════════════════════════════════════════════╝



 Spc:dmg  u:rep  o/i:heat  c:crit  t:to-hit  g:group  m:morale  n:round  r:rename  ,/.:unit  ?:help
