crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_bf_large_craft_arc_card.snap
---
source: crates/app/src/tui/mod.rs
expression: screen
---
  1:Union
▸ Air Lance 1   MV 3  SZ 2  PV 200  Normal
╔ Union (2708) ══════════════════════════════════╗
║DS   SZ 2   MV 3p   TH 1 (crit if hit > 1)      ║
║Skill 4+   PV 200                               ║
║Armor     ██████████  10/10                     ║
║Structure █████  5/5                            ║
║  Nose  STD 4/3/2/0*  MSL 1/1/1/1  ⟨PNT1⟩       ║
║  Left  STD 2/2/1/0                             ║
║  Right STD 2/2/1/0                             ║
║  Aft   STD 1/0/0/0                             ║
║Crits     Eng0  FC0  MP−0  Wpn0                 ║
║Specials  —                                     ║
╚════════════════════════════════════════════════╝















 Spc:dmg  u:rep  o/i:heat  c:crit  t:to-hit  g:group  m:morale  n:round  r:rename  ,/.:unit  ?:help
