crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_cascade_destroyed.snap
---
source: crates/app/src/tui/mod.rs
assertion_line: 995
expression: render(&mut app)
---
  1:Atlas
                        ┌HD────────┐                        ┌ HEAT ────────────────────────────────┐
                        │A 20/20   │                        │Heat 0 / 30   diss 20   eng +5        │
                        │██████████│                        │░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░│
                        │I 10/10   │                        │sinks 20× Single                      │
                        │██████████│                        │no penalties                          │
                        │          │                        │                                      │
                        │          │                        │                                      │
                        └──────────┘                        └──────────────────────────────────────┘
┌LA────────┐╔══════════════════════════════════╗┌RA────────┐┌ PILOT ───────────────────────────────┐
│A 0/20    │║                                  ║│A 20/20   ││ Gunnery 4+   Piloting 5+   BV 1897   │
│░░░░░░░░░░│║                                  ║│██████████││ ░░░░░░   unhurt                      │
│I 0/10    │║                                  ║│I 10/10   │└──────────────────────────────────────┘
│░░░░░░░░░░│║                                  ║│██████████│┌ MOVE ────────────────────────────────┐
│          │║         *** DESTROYED ***        ║│          ││ ** IMMOBILE **  wrecked              │
│          │║     (center torso destroyed)     ║│          ││ stationary  TMM -4   [v]             │
│          │║                                  ║│          ││ ⚠ PSR 18+: 20+ dmg                   │
│          │║                                  ║│          │└──────────────────────────────────────┘
│          │║                                  ║│          │┌ WEAPONS / AMMO / EQUIP ──────────────┐
│          │║                                  ║│          ││ Medium Laser    RA  H3    5          │
└──────────┘╚══════════════════════════════════╝└──────────┘│ AC/20           RT  H7    20         │
            ┌LL────────┐            ┌RL────────┐            │ AC/20 Ammo       2/2                 │
            │A 20/20   │            │A 20/20   │            │                                      │
            │██████████│            │██████████│            │                                      │
            │I 10/10   │            │I 10/10   │            │                                      │
            │██████████│            │██████████│            │                                      │
            │          │            │          │            │                                      │
            │          │            │          │            │                                      │
            └──────────┘            └──────────┘            └──────────────────────────────────────┘
 Spc:dmg  u:rep  c:crit  p:pilot  f:face  Tab:panel  ?:help
