crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_ci_classic_platoon.snap
---
source: crates/app/src/tui/mod.rs
assertion_line: 1884
expression: screen
---
  1:Clan Heavy Foot Infantry
                                                            ┌ PLATOON ─────────────────────────────┐
                                                            │Strength 15/21                        │
                                                            │███████████████████████████░░░░░░░░░░░│
                                                            │Damage ≈ 9  (full 13)                 │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            └──────────────────────────────────────┘
                        ╔PLT═══════╗                        ┌ SKILLS ──────────────────────────────┐
                        ║S 15/21   ║                        │ Gunnery 4+   Anti-Mech 5+   BV 68    │
                        ║███████░░░║                        │                                      │
                        ║          ║                        └──────────────────────────────────────┘
                        ║          ║                        ┌ MOVE ────────────────────────────────┐
                        ║          ║                        │ Move 1  Jump 0                       │
                        ║          ║                        │ stationary   [v]                     │
                        ║          ║                        │ deployed                             │
                        ║          ║                        └──────────────────────────────────────┘
                        ║          ║                        ┌ WEAPONS / AMMO / EQUIP ──────────────┐
                        ║          ║                        │ Auto-Rifle      PLT  ×21   11   r0-3 │
                        ╚══════════╝                        │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            └──────────────────────────────────────┘
 Spc:dmg  u:rep  c:crit  p:pilot  f:face  Tab:panel  ?:help
