crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_crit_popup.snap
---
source: crates/app/src/tui/mod.rs
assertion_line: 1164
expression: render(&mut app)
---
  1:Atlas
                        ┌HD────────┐                        ┌ HEAT ────────────────────────────────┐
                        │A 20/20   │                        │Heat 0 / 30   diss 20   eng +5        │
                        │██████████│                        │░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░│
                        │I 10/10   │                        │sinks 20× Single                      │
                        │██████████│                        │no penalties                          │
                        │          │                        │                                      │
                        │          │                        │                                      │
                        └──────────┘                        └──────────────────────────────────────┘
┌LA────────┐┌LT────────┐╔CT ▸F═════╗┌RT────────┐┌RA────────┐┌ PILOT ───────────────────────────────┐
│A 20/20   ││A 20/20╔ Center Torso — critical slots ═══════════════════════════╗ing 5+   BV 1897   │
│██████████││███████║  1  Fusion Engine  ×                                     ║                   │
│I 10/10   ││R 6/6  ║  2  Gyro                                                 ║───────────────────┘
│██████████││███████║▶ 3  Life Support  ×                                      ║───────────────────┐
│          ││I 10/10║  4  Sensors                                              ║p 0                │
│          ││███████║     ──────────                                           ║                   │
│          ││       ║  1  Medium Laser                                         ║                   │
│          ││       ║  2  SRM 6                                                ║───────────────────┘
│          ││       ║[Spc] hit  [a] active bin  [t] munition  [Esc] close      ║QUIP ──────────────┐
│          ││       ╚══════════════════════════════════════════════════════════╝  H3    5          │
└──────────┘└──────────┘╚══════════╝└──────────┘└──────────┘│ AC/20 Ammo       10/10               │
            ┌LL────────┐            ┌RL────────┐            │                                      │
            │A 20/20   │            │A 20/20   │            │                                      │
            │██████████│            │██████████│            │                                      │
            │I 10/10   │            │I 10/10   │            │                                      │
            │██████████│            │██████████│            │                                      │
            │          │            │          │            │                                      │
            │          │            │          │            │                                      │
            └──────────┘            └──────────┘            └──────────────────────────────────────┘
 CT Life Support destroyed | Spc:dmg  u:rep  c:crit  p:pilot  f:face  Tab:panel  ?:help
